deploy/traefik/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dict
  namespace: mialkin
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: mialkin-redirect-https@kubernetescrd
    # https://it-obey.com/index.php/redirect-http-to-https-traefik-middleware-kubernetes/
spec:
  rules:
    - host: dict.mialkin.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dict
                port:
                  number: 80
